hphp/hack/test/sound_dynamic/typing/expected_type_error.bad.php.exp
File "expected_type_error.bad.php", line 24, characters 16-22:
Invalid argument (Typing[4110])
  File "expected_type_error.bad.php", line 5, characters 22-24:
  Expected `int`
  File "expected_type_error.bad.php", line 17, characters 27-32:
  But got `string`
